DevOCL/src/objects/OCLQS_Transaction_Log__c.object
<CustomObject>
    <description>Object for Transaction Logs - Master Object
Build By Integration Team</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to mark active/inactive transactions.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <picklist>
            <picklistValues>
                <fullName>JFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JFS&amp;ODE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fail_Count__c</fullName>
        <label>Fail Count</label>
        <summaryFilterItems>
            <field>OCLQS_Transaction_Monitor__c.Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>OCLQS_Transaction_Monitor__c.Transaction_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>BCII/FBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDC Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP/IPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCCRRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCLQS-ORACLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Count__c</fullName>
        <label>Success Count</label>
        <summaryFilterItems>
            <field>OCLQS_Transaction_Monitor__c.Status__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>OCLQS_Transaction_Monitor__c.Transaction_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>BCII/FBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDC Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP/IPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCCRRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCLQS-ORACLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <formula>Fail_Count__c +  Success_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Agency__c</columns>
        <columns>Type__c</columns>
        <columns>Source__c</columns>
        <columns>Target__c</columns>
        <columns>Active__c</columns>
        <columns>Direction__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>